fixed alignment

--- a/src/app/_modules/home/_components/secondary-navbar/secondary-navbar.component.scss
+++ b/src/app/_modules/home/_components/secondary-navbar/secondary-navbar.component.scss
@@ -6,6 +6,14 @@
     height: 0;
   }
 
+  .header {
+    margin-top: 8px;
+  }
+
+  .header-row-spacer {
+    height: 11px;
+  }
+
   .tasks-list-drag-el {
     .expand-title {
       width: calc(100% - 50px);
